<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wash.washandroid.presentation.fragment.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_homeDetailFragment"
            app:destination="@id/homeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.wash.washandroid.presentation.fragment.study.StudyFragment"
        android:label="@string/navigation_study"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.wash.washandroid.presentation.fragment.note.NoteFragment"
        android:label="@string/navigation_note"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.wash.washandroid.presentation.fragment.graph.GraphFragment"
        android:label="@string/navigation_graph"
        tools:layout="@layout/fragment_study" >
        <action
            android:id="@+id/action_navigation_graph_to_viewPieChartFragment"
            app:destination="@id/viewPieChartFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.wash.washandroid.presentation.fragment.mypage.MypageFragment"
        android:label="@string/navigation_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_problem_category_subject"
        android:name="com.wash.washandroid.presentation.fragment.category.ProblemCategorySubjectFragment"
        tools:layout="@layout/fragment_problem_category_subject" >
        <action
            android:id="@+id/action_navigation_problem_category_subject_to_subfield_fragment"
            app:destination="@id/navigation_problem_category_subfield"
            app:popUpTo="@id/navigation_problem_category_subfield" />
        <action
            android:id="@+id/action_navigation_problem_category_subject_to_folder_fragment"
            app:destination="@id/navigation_problem_category_folder"
            app:popUpTo="@id/navigation_problem_category_folder" />
    </fragment>

    <fragment
        android:id="@+id/navigation_problem_category_subfield"
        android:name="com.wash.washandroid.presentation.fragment.category.ProblemCategorySubfieldFragment"
        tools:layout="@layout/fragment_problem_category_subfield" >
        <action
            android:id="@+id/action_navigation_problem_category_subfield_to_chapter_fragment"
            app:destination="@id/navigation_problem_category_chapter"
            app:popUpTo="@id/navigation_problem_category_chapter" />
        <action
            android:id="@+id/action_navigation_problem_category_subfield_to_folder_fragment"
            app:destination="@id/navigation_problem_category_folder"
            app:popUpTo="@id/navigation_problem_category_folder" />
        <action
            android:id="@+id/action_navigation_problem_category_subfield_to_subject_fragment"
            app:destination="@id/navigation_problem_category_subject"
            app:popUpTo="@id/navigation_problem_category_subject" />
    </fragment>

    <fragment
        android:id="@+id/navigation_problem_category_chapter"
        android:name="com.wash.washandroid.presentation.fragment.category.ProblemCategoryChapterFragment"
        tools:layout="@layout/fragment_problem_category_chapter" >
        <action
            android:id="@+id/action_navigation_problem_category_chapter_to_folder_fragment"
            app:destination="@id/navigation_problem_category_folder"
            app:popUpTo="@id/navigation_problem_category_folder" />
        <action
            android:id="@+id/action_navigation_problem_category_chapter_to_subfield_fragment"
            app:destination="@id/navigation_problem_category_subfield"
            app:popUpTo="@id/navigation_problem_category_subfield" />
    </fragment>

    <fragment
        android:id="@+id/navigation_problem_category_folder"
        android:name="com.wash.washandroid.presentation.fragment.category.ProblemCategoryFolderFragment"
        tools:layout="@layout/fragment_problem_category_folder" >
        <action
            android:id="@+id/action_navigation_problem_category_folder_to_chapter_fragment"
            app:destination="@id/navigation_problem_category_chapter"
            app:popUpTo="@id/navigation_problem_category_chapter" />
    </fragment>
    <fragment
        android:id="@+id/homeDetailFragment"
        android:name="com.wash.washandroid.presentation.fragment.home.HomeDetailFragment"
        android:label="HomeDetailFragment">
        <!-- Add any necessary actions here -->

        <action
            android:id="@+id/action_homeDetailFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_homeDetailFragment_to_homeClickQuizFragment"
            app:destination="@id/homeClickQuizFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeClickQuizFragment"
        android:name="com.wash.washandroid.presentation.fragment.home.HomeClickQuizFragment"
        android:label="fragment_home_click_quiz"
        tools:layout="@layout/fragment_home_click_quiz" >
        <action
            android:id="@+id/action_homeClickQuizFragment_to_homeDetailFragment"
            app:destination="@id/homeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewPieChartFragment"
        android:name="com.wash.washandroid.presentation.fragment.graph.ViewPieChartFragment"
        android:label="ViewPieChartFragment" >
        <action
            android:id="@+id/action_viewPieChartFragment_to_navigation_graph"
            app:destination="@id/navigation_graph" />
    </fragment>
</navigation>