<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="categoryViewModel"
            type="com.wash.washandroid.presentation.fragment.category.viewmodel.CategoryViewModel" />
        <variable
            name="categorySubfieldViewModel"
            type="com.wash.washandroid.presentation.fragment.category.viewmodel.CategorySubfieldViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_category_1st_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_category_1st_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="42dp" />

        <ImageView
            android:id="@+id/category_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            app:layout_constraintStart_toStartOf="@id/guideline_category_1st_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_category_1st_h" />

        <TextView
            android:id="@+id/category_problem_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_problem_choice"
            android:textColor="@color/black"
            style="@style/mg_r20"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/category_back_btn"
            app:layout_constraintTop_toTopOf="@id/guideline_category_1st_h" />

<!--        <ImageView-->
<!--            android:id="@+id/no_type_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/block"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/skip_btn"-->
<!--            app:layout_constraintTop_toTopOf="@id/guideline_category_1st_h" />-->

<!--        <ImageView-->
<!--            android:id="@+id/skip_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/skip_btn"-->
<!--            android:layout_marginEnd="25dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/guideline_category_1st_h" />-->

        <ProgressBar
            android:id="@+id/category_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="360dp"
            android:layout_height="8dp"
            android:layout_marginTop="43dp"
            android:max="100"
            android:progress="33"
            android:progressDrawable="@drawable/progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_problem_choice" />

        <TextView
            android:id="@+id/category_problem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_problem_title"
            android:textColor="@color/black"
            style="@style/mg_18"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/guideline_category_1st_v"
            app:layout_constraintTop_toBottomOf="@+id/category_progress_bar" />

        <TextView
            android:id="@+id/category_problem_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_problem_subtitle"
            android:textColor="@color/black"
            style="@style/mg_12"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="@id/guideline_category_1st_v"
            app:layout_constraintTop_toBottomOf="@+id/category_problem_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_subfield_rv"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_problem_subtitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/category_add"
            android:layout_width="360dp"
            android:layout_height="38dp"
            android:text="@string/category_add"
            android:textColor="@color/black"
            style="@style/mg_16"
            android:background="@drawable/category_choice_add_btn"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_subfield_rv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/category_next_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/category_next_btn"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>